--- a/index.html
+++ b/index.html
@@ -697,6 +697,30 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <!-- end our clients -->
 
+<!-- Trusted B2B Partner Section -->
+<section class="py-5 bg-light text-center">
+  <div class="container">
+    <h2 class="fw-bold text-primary mb-3">
+      Our Trusted B2B Partner Across <span class="text-dark">6 Countries</span>
+    </h2>
+    <p class="lead mb-4">
+      Globally Registered. Locally Trusted.
+    </p>
+
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <div class="d-flex flex-wrap justify-content-center gap-3">
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">USA</span>
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">Australia</span>
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">Germany</span>
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">UK</span>
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">Singapore</span>
+          <span class="badge bg-primary p-3 fs-6 rounded-pill shadow-sm">India</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Footer -->
     <div id="footer"></div>
