data services pages

--- a/pages/healthcare.html
+++ b/pages/healthcare.html
@@ -10,59 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   <!-- Custom CSS -->
-  <style>
-    .hero-section {
-      background-image: url('https://datasnapsolutionsinc.com/assets/images/services/gas-industry.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 0;
-      text-align: center;
-      position: relative;
-    }
-
-    .hero-section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    .hero-section h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 3rem;
-      font-weight: bold;
-    }
-
-    .section-content {
-      padding: 60px 15px;
-    }
-
-    .btn-custom {
-      background-color: #28a745;
-      color: white;
-      margin-bottom: 10px;
-      width: 100%;
-      padding: 10px 15px;
-      border-radius: 5px;
-      transition: all 0.3s ease-in-out;
-      font-weight: 500;
-    }
-
-    .btn-custom:hover {
-      background-color: #218838;
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    .btn-group-custom h5 {
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/healthcare-styles.css">
 </head>
 
 <body>
@@ -77,71 +25,68 @@
 
   <!-- Content Section -->
   <div class="container section-content">
-    <div class="row">
-      <div class="col-md-8">
-        <h5 class="text-uppercase font-weight-bold mb-3">Get Better Conversions in the Healthcare Industry</h5>
-        <p>Healthcare data refers to any data that is pertinent to the healthcare industry. Inefficient contact data can
-          keep you away from healthcare mavens and incomplete data sources can inhibit you from reaching your potential
-          customers. Data Snap Solutions Inc. possesses an all-embracing repertoire of impeccable data that help you
-          contact the right medical experts that in turn can burgeon your sales and revenue.</p>
+    <div class="main-div">
+      <div class="main-content">
+        <div class="top-text">
+          <h3 class="text-uppercase font-weight-bold mb-3">Get Better Conversions in the Healthcare Industry</h3>
+          <p>Healthcare data refers to any data that is pertinent to the healthcare industry. Inefficient contact data
+            can
+            keep you away from healthcare mavens and incomplete data sources can inhibit you from reaching your
+            potential
+            customers. Data Snap Solutions Inc. possesses an all-embracing repertoire of impeccable data that help you
+            contact the right medical experts that in turn can burgeon your sales and revenue.</p>
 
-        <h5 class="text-uppercase font-weight-bold mt-4 mb-3">Why Expand Your Healthcare Contact Database with Data Snap
-          Solutions Inc.,</h5>
-        <p>The data analysts at Data Snap Solutions Inc., take a single-minded, fastidious approach when they are
-          required to forage for reliable, contactable data. They source data from various reliable platforms such as
-          medical associations, healthcare news, newspapers & magazines, webinars, blogs, and product roll outs.</p>
+          <h3 class="text-uppercase font-weight-bold mt-4 mb-3">Why Expand Your Healthcare Contact Database with Data
+            Snap
+            Solutions Inc.,</h3>
+          <p>The data analysts at Data Snap Solutions Inc., take a single-minded, fastidious approach when they are
+            required to forage for reliable, contactable data. They source data from various reliable platforms such as
+            medical associations, healthcare news, newspapers & magazines, webinars, blogs, and product roll outs.</p>
+        </div>
+        <div>
+          <img src="https://datasnapsolutionsinc.com/assets/images/services/gas-industry.jpg" alt="Healthcare Image"
+            class="img-fluid rounded">
+        </div>
 
-        <h5 class="text-uppercase font-weight-bold mt-4 mb-3">Competitive Advantage</h5>
+      </div>
+
+      <div>
+        <h3 class="text-uppercase font-weight-bold mt-4 mb-3">Competitive Advantage</h3>
         <p>The healthcare information we provide will include direct contact details, including contact numbers, fax
           numbers, email addresses, and postal addresses in order to give you the utmost results in line with your
           unique requirements. The accurate data we provide are bolstered by a meticulous verification process that
           promotes your sales & marketing approaches, communications, and most importantly, customer engagement.</p>
       </div>
 
-      <div class="col-md-4 text-center">
-        <img src="https://datasnapsolutionsinc.com/assets/images/services/gas-industry.jpg" alt="Healthcare Image"
-          class="img-fluid rounded">
-      </div>
     </div>
 
     <!-- Email Lists Section -->
     <div class="mt-5">
-      <h4 class="text-center font-weight-bold mb-4">Our Healthcare Email Lists by Specialists</h4>
-      <div class="row">
-        <div class="col-md-4 btn-group-custom">
-          <button class="btn btn-custom">Addiction Counselors Email List</button>
-          <button class="btn btn-custom">Obstetricians Email List</button>
-          <button class="btn btn-custom">Oncologists Email List</button>
-          <button class="btn btn-custom">Internal Medicine Email List</button>
-        </div>
-        <div class="col-md-4 btn-group-custom">
-          <button class="btn btn-custom">Cosmetologists Email List</button>
-          <button class="btn btn-custom">Anesthesiologists Email List</button>
-          <button class="btn btn-custom">Nurse Practitioners Email List</button>
-          <button class="btn btn-custom">Internal Medicine Email List</button>
-        </div>
-        <div class="col-md-4 btn-group-custom">
-          <button class="btn btn-custom">Gynecologists Email List</button>
-          <button class="btn btn-custom">Cardiologists Email List</button>
-          <button class="btn btn-custom">Family/Marital Therapists Email List</button>
-          <button class="btn btn-custom">Orthopedists Email List</button>
-        </div>
+      <h4 class="text-center font-weight-bold mb-4 btn-title">Our Healthcare Email Lists by Specialists</h4>
+      <div class="button-boxes">
+        <button class="btn">Addiction Counselors Email List</button>
+        <button class="btn">Obstetricians Email List</button>
+        <button class="btn">Oncologists Email List</button>
+        <button class="btn">Internal Medicine Email List</button>
+        <button class="btn">Cosmetologists Email List</button>
+        <button class="btn">Anesthesiologists Email List</button>
+        <button class="btn">Nurse Practitioners Email List</button>
+        <button class="btn">Gynecologists Email List</button>
+        <button class="btn">Cardiologists Email List</button>
+        <button class="btn">Family/Marital Therapists Email List</button>
+        <button class="btn">Orthopedists Email List</button>
       </div>
 
-      <!-- More Lists -->
       <div class="mt-5">
-        <h5 class="text-center font-weight-bold mb-3">Healthcare Service Providers List</h5>
-        <div class="row">
-          <div class="col-md-4 offset-md-2">
-            <button class="btn btn-custom">Pharma and Biotech Email List</button>
-            <button class="btn btn-custom">Hospital Email List</button>
-          </div>
-          <div class="col-md-4">
-            <button class="btn btn-custom">Labs and Diagnostics Email List</button>
-          </div>
+        <h5 class="text-center font-weight-bold mb-4 btn-title">Healthcare Service Providers List</h5>
+        <div class="button-boxes">
+          <button class="btn">Pharma and Biotech Email List</button>
+          <button class="btn">Hospital Email List</button>
+          <button class="btn">Labs and Diagnostics Email List</button>
         </div>
       </div>
     </div>
+
   </div>
 
   <!-- Footer -->
