--- a/pages/key-design-data.html
+++ b/pages/key-design-data.html
@@ -9,62 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-  <style>
-    .hero-section {
-      background-image: url('https://datasnapsolutionsinc.com/assets/images/services/ICT-managment.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 0;
-      text-align: center;
-      position: relative;
-    }
-
-    .hero-section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    .hero-section h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 3rem;
-      font-weight: bold;
-    }
-
-    .data-section {
-      padding: 60px 0;
-    }
-
-    .btn-block-custom {
-      background-color: #28a745;
-      color: white;
-      margin: 5px 0;
-      width: 100%;
-      text-align: left;
-      padding: 10px 15px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    .btn-block-custom:hover {
-      background-color: #218838;
-    }
-
-    .btn-block-blue {
-      background-color: #2e86de;
-      color: white;
-    }
-
-    .btn-block-blue:hover {
-      background-color: #1e6bb8;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/key-design-styles.css">
 </head>
 
 <body>
@@ -73,68 +18,77 @@
 
   <!-- Hero Section -->
   <div class="hero-section">
-    <h1>KEY DECISION MAKERS DATA</h1>
+    <div class="hero-content">
+      <h1>KEY DECISION MAKERS DATA</h1>
+    </div>
   </div>
 
   <!-- Content Section -->
   <div class="container data-section">
-    <div class="row">
-      <div class="col-md-8">
-        <h5 class="mb-3 font-weight-bold text-uppercase">Power your marketing with perfect genuine key decision makers
-          contact info</h5>
-        <p>It is imperative that any organization maintains an itemized and up-to-date email database through which they
-          can apprise their prospective customers about their products and services. Out of the various types of email
-          lists, the key decision makers list is the most sought-after one because decision makers have the authority
-          and capability to make strategic decisions who deter companies from making unwise decisions that impede
-          business growth.</p>
-        <p>The main decisions that are to be made by decision makers include financial and purchasing decisions. They
-          aim to take their companies to a higher level. More so, they aim to expand their businesses to foreign
-          countries.</p>
-        <p>Data Snap Solutions Inc., help them in this pursuit by giving them the databases of top management executives
-          of organizations, including CEO, COO, CFO, CIO, and CTO. We can dig out and get highly prospective list of the
-          key decision makers as per your requirements i.e., based on demography, companies, and the size of the
-          business.</p>
-        <p>Let your data-driven marketing be pertinent. Marketing is more than just how many people you can reach out to
-          via email. It is about being genuine to each and every email recipient, every time you have an interaction.
-          Your email will be moved to trash in a split second if it is not useful or relevant to the recipient. Get in
-          touch with Data Snap Solutions Inc., to get verified data to successfully connect with your prospective
-          customers, which is the first step in sealing the deal. Our contact database is an on-demand resource, which
-          will help you engage with the right people in the right organizations.</p>
+    <div class="main-div">
+      <div class="main-content">
+        <div class="top-text">
+          <p>Technology Decision Makers belong to a different realm because leaders require different set of skills in
+            the IT
+            Industry. To be in touch with IT executives and top tech-Industry professionals, it is imperative to be
+            cognizant of
+            their identities, whereabouts, and, most importantly, how to quickly develop contact with them. If you are
+            trying hard
+            to have contact with IT decision makers and executives in corporate technology companies, then count on Data
+            Snap
+            Solutions Inc., Technology Services List. The list comprises of key IT leaders and the most authoritative
+            top-level IT
+            executives from all Industries in corporate companies in America, Canada, the UK, and Australia.</p>
+
+          <p>Your efforts in marketing will go futile if you do not have that knack of connecting with the right people.
+            You want to
+            contact the key decision makers who have the authority as well as the potency to galvanize someone into
+            action. This is
+            where Data Snap Solutions Inc., comes in. We give the data having the contacts of movers and shakers, the
+            talismans of
+            the IT Industry. Data Snap Solutions Inc., helps businesses thrive by giving them the list of key IT
+            executives and
+            incumbents in the top-management category that can make radical decisions.</p>
+        </div>
+        <div>
+          <img src="https://datasnapsolutionsinc.com/assets/images/services/ICT-managment.jpg" class="img-fluid rounded"
+            alt="Key Decision Makers">
+        </div>
       </div>
-      <div class="col-md-4 text-center">
-        <img src="https://datasnapsolutionsinc.com/assets/images/services/ICT-managment.jpg" class="img-fluid rounded"
-          alt="Key Decision Makers">
+      <div>
+        <p>Data Snap Solutions Inc., can provide you with a database of the IT decision makers in various Industries,
+          including
+          finance, BPO, government, transport & logistics, retail, manufacturing, pharmaceutical, service, travel, and
+          technology.
+          It can also provide the database of IT decision makers in all the functional areas in IT including.</p>
       </div>
     </div>
 
     <!-- Button Lists -->
     <div class="mt-5">
-      <h5 class="font-weight-bold">TOP PROFESSIONAL LISTS</h5>
-      <div class="row">
-        <div class="col-md-6">
-          <button class="btn btn-block-custom">Geo-Targeted B2B Decision Makers Marketing List</button>
-          <button class="btn btn-block-custom">CTO Email List</button>
-          <button class="btn btn-block-custom">CMO Email List</button>
-          <button class="btn btn-block-custom">CFO Email List</button>
-          <button class="btn btn-block-custom">CIO Email List</button>
-          <button class="btn btn-block-custom">CPA Email List</button>
-          <button class="btn btn-block-custom">IT VP Email List</button>
-          <button class="btn btn-block-custom">General Manager Email List</button>
-          <button class="btn btn-block-custom">Directors Email List</button>
-          <button class="btn btn-block-custom">Project Directors & Managers Email List</button>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-block-custom btn-block-blue">Accounting & Taxing Professionals Email Lists
-            List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chief & VP of HR Email List Email Lists List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Operations Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Software Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Quality Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Aeronautics Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chairman Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Chief Purchasing Officer Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Software Developers Email List</button>
-          <button class="btn btn-block-custom btn-block-blue">Event Organizer Email List</button>
+      <div class="mt-5">
+        <h5 class="font-weight-bold text-center mb-4">TOP PROFESSIONAL LISTS</h5>
+        <div class="button-boxes">
+          <button class="btn">Geo-Targeted B2B Decision Makers Marketing List</button>
+          <button class="btn">CTO Email List</button>
+          <button class="btn">CMO Email List</button>
+          <button class="btn">CFO Email List</button>
+          <button class="btn">CIO Email List</button>
+          <button class="btn">CPA Email List</button>
+          <button class="btn">IT VP Email List</button>
+          <button class="btn">General Manager Email List</button>
+          <button class="btn">Directors Email List</button>
+          <button class="btn">Project Directors & Managers Email List</button>
+          <button class="btn">Accounting & Taxing Professionals Email List</button>
+          <button class="btn">Chief & VP of HR Email List</button>
+          <button class="btn">Chief & VP of Operations Email List</button>
+          <button class="btn">Chief & VP of Software Email List</button>
+          <button class="btn">Chief & VP of Quality Email List</button>
+          <button class="btn">Aeronautics Email List</button>
+          <button class="btn">Chairman Email List</button>
+          <button class="btn">Chief Purchasing Officer Email List</button>
+          <button class="btn">Software Developers Email List</button>
+          <button class="btn">Event Organizer Email List</button>
         </div>
       </div>
     </div>
