--- a/pages/post-pre-event-data.html
+++ b/pages/post-pre-event-data.html
@@ -10,64 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   <!-- Custom CSS -->
-  <style>
-    .hero-section {
-      background-image: url('https://datasnapsolutionsinc.com/img/ev.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 0;
-      text-align: center;
-      position: relative;
-    }
-
-    .hero-section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    .hero-section h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 2.8rem;
-      font-weight: bold;
-    }
-
-    .section-content {
-      padding: 60px 15px;
-    }
-
-    .btn-custom {
-      background-color: #28a745;
-      color: white;
-      border: 2px solid #1e7e34;
-      margin-bottom: 10px;
-      width: 100%;
-      padding: 10px 15px;
-      border-radius: 5px;
-      transition: all 0.3s ease-in-out;
-      font-weight: 500;
-    }
-
-    .btn-custom:hover {
-      background-color: #218838;
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    .section-heading {
-      font-weight: bold;
-      text-transform: uppercase;
-      font-size: 18px;
-      color: #333;
-      margin-top: 30px;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/post-pre-styles.css">
 </head>
 
 <body>
@@ -82,24 +25,35 @@
 
   <!-- Content Section -->
   <div class="container section-content">
-    <h5 class="text-uppercase font-weight-bold text-secondary mb-4">Copious data but less or no reliable contacts are as
-      good as having no data at all</h5>
+    <h3 class="text-uppercase font-weight-bold  mb-4">Copious data but less or no reliable contacts are as
+      good as having no data at all</h3>
 
-    <div class="row">
-      <div class="col-md-8">
-        <h6 class="section-heading">Post-Event Data</h6>
-        <p>
-          Having too much data with very less or no dependable information can only eat up your time. So, event planning
-          has to be coupled with a well-thought-out plan for gathering data from the partakers of the event.
-          Thankfully, we have figured out the numerous ways of achieving this from post-event surveys and digital means
-          like applications. We do a careful analysis of the data we obtained after an event, measuring the ROI, and
-          finding out whether the target audiences attended the event or not. More than anything else, we evaluate what
-          worked and what did not that are very important for building on your success for upcoming events.
-          We have been adopting efficient strategies for collecting and evaluating matrices in order to gauge
-          performance indicators like event ROI. We do everything we can to give you empirical data that has the
-          information of all the clients you are looking for.
-        </p>
+    <div class="main-div">
+      <div class="main-content">
+        <div class="top-text">
+          <h6 class="section-heading">Post-Event Data</h6>
+          <p>
+            Having too much data with very less or no dependable information can only eat up your time. So, event
+            planning
+            has to be coupled with a well-thought-out plan for gathering data from the partakers of the event.
+            Thankfully, we have figured out the numerous ways of achieving this from post-event surveys and digital
+            means
+            like applications. We do a careful analysis of the data we obtained after an event, measuring the ROI, and
+            finding out whether the target audiences attended the event or not. More than anything else, we evaluate
+            what
+            worked and what did not that are very important for building on your success for upcoming events.
+            We have been adopting efficient strategies for collecting and evaluating matrices in order to gauge
+            performance indicators like event ROI. We do everything we can to give you empirical data that has the
+            information of all the clients you are looking for.
+          </p>
 
+
+        </div>
+        <div >
+          <img src="https://datasnapsolutionsinc.com/img/ev.jpg" class="img-fluid rounded" alt="Event Image">
+        </div>
+      </div>
+      <div>
         <h6 class="section-heading">Pre-Event Data</h6>
         <p>
           The apt time to gathering data is way before participants come to your event. You can start tracking
@@ -112,24 +66,21 @@
           pre-event data.
         </p>
       </div>
-      <div class="col-md-4 text-center">
-        <img src="https://datasnapsolutionsinc.com/img/ev.jpg" class="img-fluid rounded" alt="Event Image">
-      </div>
     </div>
 
     <!-- Email Lists -->
-    <h5 class="text-center font-weight-bold mt-5 mb-4">Some of the Top Selling Event and Expo Attendees Email List</h5>
-    <div class="row">
-      <div class="col-md-4">
-        <button class="btn btn-custom">Hemp & Cannabis Event & Expo Data</button>
-        <button class="btn btn-custom">Builders and Real-Estate Event & Expo Data</button>
-        <button class="btn btn-custom">Finance and Investment Event & Expo Data</button>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-custom">Auto Event & Expo Data</button>
-        <button class="btn btn-custom">Healthcare Event & Expo Data</button>
-        <button class="btn btn-custom">Information and Technology Event & Expo Data</button>
-      </div>
+    <h5 class="text-center font-weight-bold mt-5 mb-4">
+      Some of the Top Selling Event and Expo Attendees Email List
+    </h5>
+    <div class="button-boxes">
+      <button class="btn">Hemp & Cannabis Event & Expo Data</button>
+      <button class="btn">Builders and Real-Estate Event & Expo Data</button>
+      <button class="btn">Finance and Investment Event & Expo Data</button>
+      <button class="btn">Auto Event & Expo Data</button>
+      <button class="btn">Healthcare Event & Expo Data</button>
+      <button class="btn">Information and Technology Event & Expo Data</button>
+    </div>
+
     </div>
   </div>
 
