--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
+    <title>Data Snap Solutions</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+    .list-unstyled a
+    {
+      color: #fff;
+      padding-bottom: 8px;
+    }
+    .list-unstyled a:hover
+    {
+      text-decoration: none;
+    }
+  </style>
+  
   </head>
   <body>
 
@@ -20,7 +32,7 @@
         <h5 class="fw-bold mb-3">ABOUT US</h5>
         <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
         <p>
-          Data Snap Solutions Inc., US-based data solutions provider, headquartered in Willington, Delaware.
+          Data Snap Solutions Inc. US-based data solutions provider, headquartered in Willington, Delaware.
         </p>
         <p>
           Working hand in hand with companies to achieve profitable growth and being a backbone in providing the world’s most comprehensive B2B database.
@@ -31,16 +43,21 @@
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">COMPANY LINKS</h5>
         <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
-        <ul class="list-unstyled">
-          <li>» B2B Data</li>
-          <li>» Key Decision Makers Data</li>
-          <li>» Post Event / Pre Event Database</li>
-          <li>» Email Marketing Programs</li>
-          <li>» Technology Data</li>
-          <li>» Industry Data</li>
-          <li>» Healthcare Data</li>
-          <li>» Data Append</li>
-          <li>» Email Append</li>
+        <ul class="list-unstyled d-flex">
+        <div class="">
+          <li><a href="/pages/b2b-data.html">» B2B Data</a></li>
+          <li><a href="/pages/key-design-data.html">» Key Decision Makers Data</a></li>
+          <li><a href="/pages/email-marketing.html">» Email Marketing Programs</a></li>
+          <li><a href="/pages/tech-data.html">» Technology Data</a></li>
+          <li><a href="/pages/healthcare.html">» Healthcare Data</a></li>
+          <li><a href="/pages/post-pre-event-data.html">» Post Event / Pre Event Database</a></li>
+        </div>
+
+        <div class="">
+          <li><a href="/pages/industry.html">» Industry Data</a></li>
+          <li><a href="/pages/data-append.html">» Data Append</a></li>
+          <li><a href="/pages/email-append.html">» Email Append</a></li>
+        </div>
         </ul>
       </div>
 
