--- a/pages/tech-data.html
+++ b/pages/tech-data.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Technology Data</title>
-  <meta charset="utf-8">
+    <title>Data Snap Solutions</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
