--- a/pages/b2b-data.html
+++ b/pages/b2b-data.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>B2B Data Solutions</title>
-  <meta charset="utf-8">
+    <title>Data Snap Solutions</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap 5 CSS -->
